--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background: black;
+  margin:auto;
+  border:1px solid black;
+
 }
 
 .App-logo {
@@ -34,7 +38,7 @@
 
 
 .friends{
-  border:solid red;
+  /*border:solid red;*/
   display:flex;
   justify-content: center;
   flex-direction: column;
@@ -44,9 +48,33 @@
 
 
 .friends-card{
-  border:solid blue;
+  border: 3px solid goldenrod;
+  background: black;
+  color:turquoise;
   height:300px;
   width:400px;
   margin:10px 10px 10px 10px;
+  font-weight: bold;
+  font-size: 1.6rem;
  
+}
+
+h1{
+  color:turquoise;
+  
+}
+
+.form{
+  color:turquoise;
+ /* border:solid red;*/
+  padding:20px 20px 20px 20px;
+}
+
+.form1{
+ /* border:solid pink;*/
+  padding:20px 20px 20px 20px;
+  display:flex;
+  flex-direction: column;
+  width:350px;
+  margin:auto;
 }
